--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jquery": "^3.3.1",
     "vue": "^2.5.17",
     "vue-isyourpasswordsafe": "^1.0.2",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
